syntax = "proto3";

package greeting;

option java_multiple_files = true;
option java_package = "com.proto.greeting";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service GreetingService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}